[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "arm64-mask-gen-py"
authors = [{ name = "Fran", email = "fran@logicode.es" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/xliee/arm64-mask-gen-py-wrapper"
Repository = "https://github.com/xliee/arm64-mask-gen-py-wrapper"

[tool.maturin]
features = ["pyo3/extension-module"]
